sto-prod-1/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sto-prod-1
  namespace: sto-prod-1
  annotations:
    argocd.argoproj.io/sync-wave: "20"
  labels:
    app: sto
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: sto
  template:
    metadata:
      labels:
        app: sto
    spec:
      imagePullSecrets:
        - name: nexus-secret
      containers:
      - name: sto
        image: nexus3.prod-1.dev-software.pl:5001/senti-therma-operations/senti-therma-operations:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: 512Mi
            cpu: 100m
          limits:
            memory: 768Mi
        startupProbe:
          tcpSocket:
            port: 8080
          periodSeconds: 5
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: /api/calculators
            port: 8080
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 8080
          periodSeconds: 10
