sto-prod-1/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sto
  namespace: sto-prod-1
  labels:
    app: sto
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: sto
