sto-prod-1/IngressRoute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sto-ingress
  namespace: sto-prod-1
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sto.prod-1.dev-software.pl`)
      kind: Rule
      services:
        - name: sto
          port: 8080
  tls:
    secretName: prod-1-dev-software-prod-tls
